[package]
name = "rustycable"
version = "0.1.0"
authors = ["Ieva Skrabutena <skrabutena.ieva@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
futures-util = "0.3.5"
http = "0.2.1"
prost = "0.6.1"
redis = "0.16.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2.18", features = ["full"] }
tonic = "0.2.0"
tokio-tungstenite = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
